--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,14 +1,34 @@
-name: Upload to S3
+name: Deploy
 
 on:
   push:
     branches: master
 
 jobs:
+  build: 
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
+        with:
+          node-version: '12'
+      - name: npm install, build
+        run: |
+          npm ci
+          npm run build --if-present
+      - name: Upload public dir
+        uses: actions/upload-artifact@v1
+        with:
+          name: dist
+          path: dist
   upload:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
+      - name: Download public dir
+        uses: actions/download-artifact@v1
+        with:
+          name: dist
       - uses: shallwefootball/s3-upload-action@master
         with:
           aws_key_id: ${{ secrets.AWS_KEY_ID }}
