--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,9 +1,7 @@
-name: Deploy
-
+name: Deploy Whatsapp Widget
 on:
   push:
     branches: master
-
 jobs:
   build: 
     runs-on: ubuntu-latest
@@ -21,7 +19,9 @@ jobs:
         with:
           name: dist
           path: dist
-  upload:
+  deploy:
+    name: Deploy
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
